# outpunch

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: ci.yml  release.yml
.github/workflows/archived/: pypi-musllinux.yml
adapters/ruby/rack/: Gemfile  justfile  outpunch-rack.gemspec
adapters/ruby/rack/lib/outpunch/: rack.rb
adapters/ruby/rack/lib/outpunch/rack/: connection.rb  hooks.rb  middleware.rb  server.rb  version.rb
adapters/ruby/rack/spec/: connection_spec.rb  hooks_spec.rb  integration_spec.rb  middleware_spec.rb  server_spec.rb  spec_helper.rb
adapters/ruby/rails/: Gemfile  outpunch-rails.gemspec  outpunch.gemspec
adapters/ruby/rails/app/controllers/outpunch/: tunnel_controller.rb
adapters/ruby/rails/lib/: outpunch.rb
adapters/ruby/rails/lib/outpunch/: rails.rb
adapters/ruby/rails/lib/outpunch/rails/: engine.rb  version.rb
adapters/ruby/rails/spec/: rails_spec.rb  spec_helper.rb
adapters/ruby/rails/spec/controllers/: tunnel_controller_spec.rb
adapters/ruby/rails/spec/dummy/config/: application.rb
bindings/node/: Cargo.toml  index.d.ts  index.js  justfile  package-lock.json  package.json  tsconfig.json  vitest.config.ts
bindings/node/js/: index.ts  server.ts  vite.ts
bindings/node/npm/darwin-arm64/: README.md  package.json
bindings/node/npm/darwin-x64/: README.md  package.json
bindings/node/npm/linux-arm64-gnu/: README.md  package.json
bindings/node/npm/linux-arm64-musl/: README.md  package.json
bindings/node/npm/linux-x64-gnu/: README.md  package.json
bindings/node/npm/linux-x64-musl/: README.md  package.json
bindings/node/npm/win32-x64-msvc/: README.md  package.json
bindings/node/src/: lib.rs  lib_tests.rs
bindings/node/tests/: server.test.ts  spike.test.ts  vite.test.ts
bindings/python/: Cargo.toml  README.md  justfile  pyproject.toml
bindings/python/src/: lib.rs  lib_tests.rs
bindings/python/src/outpunch/: __init__.py  _core.pyi
bindings/python/tests/: test_config.py  test_run.py
bindings/ruby/: .gitignore  Cargo.toml  Gemfile  Rakefile  justfile  outpunch.gemspec
bindings/ruby/ext/outpunch/: Cargo.toml  extconf.rb
bindings/ruby/ext/outpunch/src/: lib.rs
bindings/ruby/lib/: outpunch.rb
bindings/ruby/spec/: outpunch_spec.rb  run_spec.rb  spec_helper.rb
bindings/ruby/src/: lib.rs  lib_tests.rs
crates/outpunch/: Cargo.toml
crates/outpunch-axum/: Cargo.toml
crates/outpunch-axum/examples/: server.rs
crates/outpunch-axum/src/: lib.rs  lib_tests.rs
crates/outpunch-axum/tests/: integration.rs
crates/outpunch-client/: Cargo.toml
crates/outpunch-client/src/: lib.rs  lib_tests.rs  main.rs
crates/outpunch/src/: protocol.rs  protocol_tests.rs  server.rs  server_tests.rs
docs/: architecture.md  future.md  glossary.md  javascript-frameworks.md  phase1.md  phases.md  product.md  project-structure.md  registries.md  testing-holes.md  testing.md  tunnel-proxy.md
