[package]
name = "outpunch-node"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.8.3", features = ["async", "napi9"] }
napi-derive = "3.5.2"
outpunch = { version = "0.1.0", path = "../../crates/outpunch" }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }

[build-dependencies]
napi-build = "2.3.1"
