[project]
name = "outpunch"
version = "0.1.0"
description = "Python bindings for the outpunch tunnel client"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.maturin]
module-name = "outpunch._core"
python-packages = ["outpunch"]
python-source = "src"

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "src/**/*.rs" }, { file = "Cargo.toml" }, { file = "Cargo.lock" }]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
