[package]
name = "outpunch-ruby"
version = "0.1.0"
edition = "2024"

[lib]
name = "outpunch"
crate-type = ["cdylib"]

[dependencies]
outpunch-client = { version = "0.1.0", path = "../../crates/outpunch-client" }
magnus = { version = "0.7" }
rb-sys = { version = "0.9", features = ["stable-api-compiled-fallback"] }
tokio = { version = "1.50.0", features = ["full"] }

[build-dependencies]
rb-sys-build = "0.9"
