[package]
name = "outpunch-axum"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["ws"] }
base64 = "0.22.1"
futures-util = "0.3.32"
outpunch = { version = "0.1.0", path = "../outpunch" }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["sync", "time"] }

[dev-dependencies]
futures-util = "0.3.32"
reqwest = "0.13.2"
tokio = { version = "1.50.0", features = ["full"] }
tokio-tungstenite = "0.29.0"
