[package]
name = "outpunch-client"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.6.0", features = ["derive", "env"] }
futures-util = "0.3.32"
outpunch = { version = "0.1.0", path = "../outpunch" }
reqwest = { version = "0.13.2", features = ["charset", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
tokio-tungstenite = "0.29.0"

[dev-dependencies]
axum = { version = "0.8.8", features = ["ws"] }
outpunch-axum = { path = "../outpunch-axum" }
tokio-tungstenite = "0.29.0"
