[package]
name = "outpunch-client"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "Client library and binary for outpunch reverse WebSocket tunnel"
repository = "https://github.com/joenap/outpunch"
homepage = "https://github.com/joenap/outpunch"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.6.0", features = ["derive", "env"] }
futures-util = "0.3.32"
outpunch = { version = "0.1.1", path = "../outpunch" }
reqwest = { version = "0.13.2", features = ["charset", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
tokio-tungstenite = { version = "0.29.0", features = ["native-tls"] }

[dev-dependencies]
axum = { version = "0.8.8", features = ["ws"] }
outpunch-axum = { path = "../outpunch-axum" }
tokio-tungstenite = { version = "0.29.0", features = ["native-tls"] }
